<resources>
    <string name="app_name">SafeRunner</string>

    <!-- Simple button strings -->
    <string name="activate_runner_guard">Activate Guard</string>
    <string name="deactivate_runner_guard">Deactivate Guard</string>

    <!-- String for toolbar menu -->
    <string name="settings_name">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference keys
    <string name="preferences_notification_message_key">notification_message</string>
    <string name="preferences_speed_threshold_key">speed_threshold</string>
    <string name="preferences_maximum_still_time_key">maximum_still_time</string>
    <string name="preference_extra_add_phone_number_key">extra_add_phone_number_key</string>
    <string name="preference_extra_remove_phone_number_key">extra_remove_phone_number_key</string>
    <string name="preference_category_phone_number">preference_category_phone_number</string>
-->
    <!-- Preference keys -->
    <string name="preferences_notification_message_key">notification_message</string>
    <string name="preferences_speed_threshold_key">speed_threshold</string>
    <string name="preferences_maximum_still_time_key">maximum_still_time</string>
    <string name="preference_extra_phone_number_key">extra_phone_number_key</string>
    <string name="preference_extra_add_phone_number_key">extra_add_phone_number_key</string>
    <string name="preference_extra_remove_phone_number_key">extra_remove_phone_number_key</string>
    <string name="preference_category_phone_number">preference_category_phone_number</string>


    <!-- Preference headers -->
    <string name="help_notification_header">Emergency notification</string>
    <string name="gps_header">GPS</string>

    <!-- Preference titles -->
    <string name="receiver_title">Phone Number</string>
    <string name="speed_threshold_title">Speed Threshold</string>
    <string name="maximum_still_time_title">Maximum Still Time</string>
    <string name="add_phone_number_title">Add</string>
    <string name="remove_phone_number_title">Remove</string>

    <!-- Preference defaults -->
    <string name="default_speed_threshold">0.5</string>
    <string name="default_maximum_still_time">20</string>

    <!-- Preference summaries -->
    <string name="preference_receiver_summary">Phone number to send a help notification to.</string>
    <string name="preference_speed_threshold_summary">Minimum allowed speed before sending help notification (in M/S).</string>
    <string name="preference_maximum_still_time_summary">Maximum time to be able to be under the set speed threshold before the an emergency notification is sent.</string>
</resources>
