<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/help_notification_header"
        app:key="@string/preference_category_phone_number">

        <EditTextPreference
            app:key="@string/preferences_notification_message_key"
            app:title="@string/receiver_title"
            app:summary="@string/preference_receiver_summary" />

        <!--
        <Preference
            app:key="phone_preference"
            android:layout="@layout/add_phone_number_preference" />
        -->

        <Preference
            app:title="@string/add_phone_number_title"
            app:key="@string/preference_extra_add_phone_number_key" />

        <Preference
            app:title="@string/remove_phone_number_title"
            app:key="@string/preference_extra_remove_phone_number_key" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/gps_header">

        <EditTextPreference
            app:key="@string/preferences_speed_threshold_key"
            app:title="@string/speed_threshold_title"
            app:summary="@string/preference_speed_threshold_summary"
            app:defaultValue="@string/default_speed_threshold" />

        <ListPreference
            app:key="@string/preferences_maximum_still_time_key"
            app:title="@string/maximum_still_time_title"
            app:entries="@array/maximum_still_time_entries"
            app:entryValues="@array/maximum_still_time_values"
            app:summary="@string/preference_maximum_still_time_summary"
            app:defaultValue="@string/default_maximum_still_time" />

    </PreferenceCategory>

</PreferenceScreen>
